Fixing controller tests